chore: Reorganize the theme
I have discovered that the project structure I had was a bit clunky and it used @import which shouldn't be used in modern SCSS.

See: https://dev.to/dostonnabotov/a-modern-sass-folder-structure-330f
Signed-off-by: Ștefan Alecu <165364995+overanalytcl@users.noreply.github.com>

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,15 +1,9 @@
-@import "abstracts/variables";
-@import "abstracts/mixins";
-@import "abstracts/functions";
+@charset "utf-8";
 
-@import "base/reset";
-@import "base/typography";
-@import "base/base";
-
-@import "layout/grid";
-@import "layout/header";
-@import "layout/sidebar";
-@import "layout/footer";
-
-@import "themes/light";
-@import "themes/dark";
+@use "abstracts";
+@use "vendors";
+@use "base";
+@use "utilities";
+@use "components";
+@use "pages";
+@use "themes";
