--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,11 +13,11 @@
     <div class="container">
         <h2 class="section-title">Clean, Readable Code</h2>
         <div class="highlight">
-            <pre><code class="language-pascal">program HelloWorld;
-begin
-    writeln('Hello, World!');
-    writeln('Welcome to Pascal programming');
-end.</code></pre>
+            <pre class="chroma"><code><span class="k">program</span> <span class="n">HelloWorld</span>;
+<span class="k">begin</span>
+    <span class="nf">writeln</span>(<span class="s1">'Hello, World!'</span>);
+    <span class="nf">writeln</span>(<span class="s1">'Welcome to Pascal programming'</span>);
+<span class="k">end</span>.</code></pre>
         </div>
     </div>
 </section>
