feat: line no on homepage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,7 +17,7 @@ begin
     writeln('Hello, World!');
     writeln('Welcome to Pascal programming');
 end.` }}
-        {{ highlight $codeExample "objectpascal" "linenos=false" }}
+        {{ highlight $codeExample "objectpascal" "linenos=true" }}
     </div>
 </section>
 
