feat: created capsule for pascal dialect indicator

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,7 +48,7 @@ begin
 
   Application.Run;
 end.` }}
-                        {{ highlight $webserverCode "objectpascal" "linenos=false" }}
+<div class="highlight capsule-fpc">{{ highlight $webserverCode "objectpascal" "linenos=false"}}</div>
                     </div>
                     
                     <div class="code-example" id="example-sorting">
@@ -78,7 +78,7 @@ begin
     Numbers.Free;
   end;
 end.` }}
-                        {{ highlight $sortingCode "objectpascal" "linenos=false" }}
+<div class="highlight capsule-fpc">{{ highlight $sortingCode "objectpascal" "linenos=false"}}</div>
                     </div>
                     
                     <div class="code-example" id="example-json">
@@ -99,7 +99,7 @@ begin
     JSON.Free;
   end;
 end.` }}
-                        {{ highlight $jsonCode "objectpascal" "linenos=false" }}
+<div class="highlight capsule-fpc">{{ highlight $jsonCode "objectpascal" "linenos=false"}}</div>
                     </div>
                     
                     <div class="code-example" id="example-filestream">
@@ -135,7 +135,7 @@ end.` }}
      FileStream.Free;
    end;
  end.` }}
-                        {{ highlight $filestreamCode "objectpascal" "linenos=false" }}
+<div class="highlight capsule-fpc">{{ highlight $filestreamCode "objectpascal" "linenos=false"}}</div>
                     </div>
                     
                     <div class="code-example" id="example-sqlite">
@@ -180,7 +180,7 @@ begin
     Conn.Free;
   end;
 end.` }}
-                        {{ highlight $sqliteCode "objectpascal" "linenos=false" }}
+<div class="highlight capsule-fpc">{{ highlight $sqliteCode "objectpascal" "linenos=false"}}</div>
                     </div>
                     
                     <div class="code-example" id="example-csv">
@@ -217,7 +217,7 @@ begin
     CSV.Free;
   end;
 end.` }}
-                        {{ highlight $csvCode "objectpascal" "linenos=false" }}
+<div class="highlight capsule-fpc">{{ highlight $csvCode "objectpascal" "linenos=false"}}</div>
                     </div>
                     
                     <div class="code-example" id="example-concurrent">
@@ -276,7 +276,7 @@ begin
 end.
 
 ` }}
-                        {{ highlight $concurrentCode "objectpascal" "linenos=false" }}
+<div class="highlight capsule-fpc">{{ highlight $concurrentCode "objectpascal" "linenos=false"}}</div>
                     </div>
                 </div>
             </div>
